--- a/kms/kms.toml
+++ b/kms/kms.toml
@@ -41,6 +41,6 @@ gateway_app_id = "any"
 [core.onboard]
 enabled = true
 auto_bootstrap_domain = ""
-quote_enabled = true
+quote_enabled = false
 address = "0.0.0.0"
 port = 8000
