--- a/vmm/vmm.toml
+++ b/vmm/vmm.toml
@@ -6,7 +6,7 @@ keep_alive = 10
 log_level = "debug"
 address = "unix:./vmm.sock"
 reuse = true
-kms_url = "http://127.0.0.1:9201"
+kms_url = "https://127.0.0.1:9201"
 
 
 [networking]
@@ -17,8 +17,8 @@ restrict = false
 
 [cvm]
 qemu_path = ""
-kms_urls = ["http://127.0.0.1:9201"]
-gateway_urls = ["http://127.0.0.1:9202"]
+kms_urls = ["https://127.0.0.1:9201"]
+gateway_urls = ["https://127.0.0.1:9202"]
 # PCCS URL used by guest to verify the quote from local key provider
 pccs_url = ""
 docker_registry = ""
