更新 kms.toml 中的 auth_api 类型为 dev；重构 replay_event_logs 函数以返回默认值并注释掉旧实现

--- a/kms/kms.toml
+++ b/kms/kms.toml
@@ -30,7 +30,7 @@ download_url = "http://localhost:8000/{OS_IMAGE_HASH}.tar.gz"
 download_timeout = "2m"
 
 [core.auth_api]
-type = "webhook"
+type = "dev"
 
 [core.auth_api.webhook]
 url = "http://auth-api:8000"
