将模拟器启用设置从 true 更改为 false；更新 entrypoint.sh 中的 verify 设置为 false，以禁用验证功能; 更新cert-client中lib的模拟quote和eventlog生成

--- a/guest-agent/dstack.toml
+++ b/guest-agent/dstack.toml
@@ -13,7 +13,7 @@ sys_config_file = "/dstack/.host-shared/.sys-config.json"
 data_disks = ["/"]
 
 [default.core.simulator]
-enabled = true
+enabled = false
 quote_file = "quote.hex"
 event_log_file = "eventlog.json"
 
