--- a/ra-tls/Cargo.toml
+++ b/ra-tls/Cargo.toml
@@ -24,7 +24,7 @@ x509-parser.workspace = true
 yasna.workspace = true
 tracing.workspace = true
 sha3.workspace = true
-tdx-attest.workspace = true
+csv-attest.workspace = true
 scale.workspace = true
 
 cc-eventlog.workspace = true
