--- a/cert-client/Cargo.toml
+++ b/cert-client/Cargo.toml
@@ -12,4 +12,6 @@ dstack-kms-rpc.workspace = true
 ra-rpc = { workspace = true, features = ["client"] }
 ra-tls.workspace = true
 serde_json.workspace = true
-tdx-attest.workspace = true
+hex.workspace = true
+csv-attest.workspace = true
+cc-eventlog.workspace = true
