--- a/dstack-util/Cargo.toml
+++ b/dstack-util/Cargo.toml
@@ -30,7 +30,8 @@ dstack-kms-rpc.workspace = true
 ra-rpc = { workspace = true, features = ["client"] }
 ra-tls.workspace = true
 dstack-gateway-rpc.workspace = true
-tdx-attest.workspace = true
+csv-attest.workspace = true
+cc-eventlog.workspace = true
 host-api = { workspace = true, features = ["client"] }
 cmd_lib.workspace = true
 toml.workspace = true
@@ -45,6 +46,9 @@ serde_yaml2.workspace = true
 bollard.workspace = true
 sodiumbox.workspace = true
 libc.workspace = true
+
+[features]
+default = []
 
 [dev-dependencies]
 rand.workspace = true
